# alpha_research

./: .gitignore  LOG.md  README.md  TASKS.md  pyproject.toml  research_guideline.md  review_guideline.md  review_plan.md  work_plan.md
config/: constitution.yaml  review_config.yaml
docs/: DISCUSSION.md  LOGS.md  PLAN.md  PROJECT.md  SURVEY.md
frontend/: package-lock.json  package.json  tailwind.config.ts
guidelines/: FRONTEND.md  README.md  TASKS.md  project_lifecycle_revision_plan.md  refactor_plan.md  research_plan.md  review_standards_reference.md  tools_and_skills.md  tools_and_skills_implementation.md  vibe_research_survey.md
guidelines/architecture/: experiment_interface.md  tools_and_skills.md
guidelines/doctrine/: problem_formulation_guide.md
guidelines/history/: refactor_plan.md
guidelines/spec/: implementation_plan.md  research_plan.md  review_plan.md
scripts/: audit_stats.py  check_docs.py  install_hooks.sh  sympy_verify.py
skills/adversarial-review/: SKILL.md
skills/benchmark-survey/: SKILL.md
skills/challenge-articulate/: SKILL.md
skills/classify-capability/: SKILL.md
skills/concurrent-work-check/: SKILL.md
skills/diagnose-system/: SKILL.md
skills/experiment-analyze/: SKILL.md
skills/experiment-audit/: SKILL.md
tests/: conftest.py  report_helpers.py  test_api.py  test_api_projects.py  test_cli.py  test_config.py  test_full_loop.py  test_git_state.py  test_llm.py  test_model_blackboard.py  test_model_research.py  test_model_review.py  test_model_snapshot.py  test_models.py  test_orchestrator.py  test_phase_5_6_skills.py  test_project_cli.py  test_project_docs_invariant.py  test_project_integration.py  test_project_registry.py  test_project_service.py  test_project_state.py  test_prompts.py  test_records.py  test_records_jsonl.py  test_reports_templates.py  test_research_agent.py  test_review_agent.py  test_review_quality.py  test_skills.py  test_store.py
(+143 files in other folders)
