[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alpha-research"
version = "0.1.0"
description = "Multi-agent research and adversarial review system for robotics"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "typer>=0.12",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "arxiv>=2.1",
    "anthropic>=0.40",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "sse-starlette>=1.6",
    "sympy>=1.12",  # R1: sympy_verify.py helper
    "scipy>=1.11",  # R1: audit_stats.py helper
    # alpha_review is installed separately as an editable dependency:
    #   pip install -e ../alpha_review
    # See guidelines/refactor_plan.md Part 0 for setup.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
alpha-research = "alpha_research.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/alpha_research"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
